Add name parser